# tree-sitter-latte

./: CMakeLists.txt  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-latte.wasm  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_latte/: __init__.py
queries/helix/: highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  scanner.c
